# entwine

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  publish.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-document-ingestion-pipeline.md  1-2-sample-company-knowledge-base.md  1-3-role-based-knowledge-access.md  1-4-hybrid-search-tuning-evaluation.md  2-1-e2b-sandbox-integration.md  2-2-claude-agent-sdk-coder-loop.md  2-3-coder-agent-tools.md  2-4-github-pr-workflow.md  2-5-qa-agent-pr-review.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/wds/: config.yaml
docs/: api.md  configuration.md  contributing.md  design.md  infrastructure.md  project-summary.md  quickstart.md  runbook.md
docs/adr/: 001-programming-language-and-runtime.md  002-llm-providers-and-integration-strategy.md  003-rag-approaches-and-knowledge-management.md  004-user-interaction-model.md  005-agent-architecture-and-lifecycle.md  006-platform-api-integration.md  007-deployment-and-infrastructure.md  008-project-conventions-and-workflow.md  010-agentic-developer-integration.md
examples/: entsim.yaml  entwine.yaml
examples/evaluation/: queries.yaml  rag_eval_dataset.json
examples/knowledge/: company-handbook.md  engineering-playbook.md  engineering-standards.md  marketing-content-calendar.md  marketing-playbook.md  onboarding-guide.md  product-roadmap-q2.md  product-roadmap.md  sales-playbook.md  sales-process.md  support-runbook.md
src/entsim/: __init__.py
src/entwine/: __init__.py
tests/benchmarks/: test_benchmarks.py
tests/integration/: test_agent_loop.py  test_engine_regression.py  test_simulation.py  (+1 more)
(+119 files in other folders)
